--- a/scenarios/square_mesh.yaml
+++ b/scenarios/square_mesh.yaml
@@ -44,10 +44,12 @@ network:
 
 failure_policy_set:
   single_link_failure:
-    rules:
-      - entity_scope: link
-        rule_type: choice
-        count: 1
+    modes:
+      - weight: 1.0
+        rules:
+          - entity_scope: link
+            rule_type: choice
+            count: 1
 
 traffic_matrix_set:
   default:
