--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,9 @@ __pypackages__/
 *.swo
 *~
 
+# Cursor
+.cursorrules
+
 # -----------------------------------------------------------------------------
 # Jupyter Notebooks
 # -----------------------------------------------------------------------------
