--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -20,16 +20,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install '.[dev]'
-      - name: Lint with Ruff
+      - name: CI checks (lint + validate + tests)
         run: |
-          ruff check .
-          ruff format --check .
-      - name: Type check with Pyright
-        run: |
-          pyright
-      - name: Validate YAML schemas
-        run: |
-          make validate
-      - name: Test with pytest and check coverage
-        run: |
-          pytest
+          make check-ci
