--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ dev = [
     "pdoc",
     # style + type checking
     "ruff==0.11.13",
-    "pyright",
+    "pyright==1.1.401",
     # type stubs
     "pandas-stubs",
     # pre-commit hooks
