--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
     hooks:
       - id: pyright
         args: [--project, pyproject.toml]
-        additional_dependencies: ['networkx', 'pyyaml', 'pandas', 'matplotlib', 'seaborn', 'nbformat', 'itables', 'pandas-stubs']
+        additional_dependencies: ['networkx', 'pyyaml', 'pandas', 'pandas-stubs']
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
@@ -20,6 +20,8 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-toml
+      - id: check-json
+        files: ^schemas/.*\.json$
       - id: check-merge-conflict
       - id: check-added-large-files
 
