unconditional schema validation

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,7 +21,7 @@ repos:
       - id: check-yaml
       - id: check-toml
       - id: check-json
-        files: ^schemas/.*\.json$
+        files: ^ngraph/schemas/.*\.json$
       - id: check-merge-conflict
       - id: check-added-large-files
 
