--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ version = "0.9.1"
 description = "A tool and a library for network modeling and analysis."
 readme = "README.md"
 authors = [{ name = "Andrey Golovanov" }]
-license = "MIT"
+license = "AGPL-3.0-or-later"
 license-files = ["LICENSE"]
 requires-python = ">=3.11"
 
@@ -78,11 +78,7 @@ markers = [
 # Coverage configuration
 [tool.coverage.run]
 source = ["."]
-omit = [
-    "*/tests/*",
-    "*/test_*",
-    "*/conftest.py",
-]
+omit = ["*/tests/*", "*/test_*", "*/conftest.py"]
 
 [tool.coverage.report]
 exclude_lines = [
@@ -110,8 +106,8 @@ line-length = 88
 indent-width = 4
 
 [tool.ruff.lint]
-select = ["E4", "E7", "E9", "F", "B", "I"]   # core + Bugbear + isort
-ignore = ["E501"]                             # long lines handled by formatter
+select = ["E4", "E7", "E9", "F", "B", "I"] # core + Bugbear + isort
+ignore = ["E501"]                          # long lines handled by formatter
 fixable = ["ALL"]
 
 [tool.ruff.lint.isort]
@@ -124,17 +120,17 @@ skip-magic-trailing-comma = false
 # ---------------------------------------------------------------------
 # Pyright / Pylance
 [tool.pyright]
-typeCheckingMode = "standard"     # balanced level
+typeCheckingMode = "standard" # balanced level
 pythonVersion = "3.11"
 exclude = [
-    "tests/**",                   # tests often use dynamic patterns
-    "dev/**",                     # development utilities (not shipped)
-    "**/venv/**",                # virtual environments (generic)
-    "**/*venv/**",               # virtual environments (various naming)
-    "build/**",                  # build artifacts
-    "dist/**",                   # distribution files
-    "**/__pycache__/**",         # Python cache files
-    "**/*.egg-info/**"           # egg info directories
+    "tests/**",          # tests often use dynamic patterns
+    "dev/**",            # development utilities (not shipped)
+    "**/venv/**",        # virtual environments (generic)
+    "**/*venv/**",       # virtual environments (various naming)
+    "build/**",          # build artifacts
+    "dist/**",           # distribution files
+    "**/__pycache__/**", # Python cache files
+    "**/*.egg-info/**",  # egg info directories
 ]
 reportMissingTypeStubs = "warning"
 reportUnknownMemberType = "none"
