--- a/tests/integration/scenario_3.yaml
+++ b/tests/integration/scenario_3.yaml
@@ -111,8 +111,8 @@ workflow:
   # Forward direction analysis - equivalent to capacity_probe
   - step_type: MaxFlow
     name: capacity_analysis_forward
-    source_path: my_clos1/b.*/t1
-    sink_path: my_clos2/b.*/t1
+    source: my_clos1/b.*/t1
+    sink: my_clos2/b.*/t1
     mode: combine
     shortest_path: true
     flow_placement: PROPORTIONAL
@@ -123,8 +123,8 @@ workflow:
   # Reverse direction analysis - equivalent to capacity_probe with probe_reverse
   - step_type: MaxFlow
     name: capacity_analysis_reverse
-    source_path: my_clos2/b.*/t1
-    sink_path: my_clos1/b.*/t1
+    source: my_clos2/b.*/t1
+    sink: my_clos1/b.*/t1
     mode: combine
     shortest_path: true
     flow_placement: PROPORTIONAL
@@ -135,8 +135,8 @@ workflow:
   # Forward direction with EQUAL_BALANCED - equivalent to capacity_probe2
   - step_type: MaxFlow
     name: capacity_analysis_forward_balanced
-    source_path: my_clos1/b.*/t1
-    sink_path: my_clos2/b.*/t1
+    source: my_clos1/b.*/t1
+    sink: my_clos2/b.*/t1
     mode: combine
     shortest_path: true
     flow_placement: EQUAL_BALANCED
@@ -147,8 +147,8 @@ workflow:
   # Reverse direction with EQUAL_BALANCED - equivalent to capacity_probe2 with probe_reverse
   - step_type: MaxFlow
     name: capacity_analysis_reverse_balanced
-    source_path: my_clos2/b.*/t1
-    sink_path: my_clos1/b.*/t1
+    source: my_clos2/b.*/t1
+    sink: my_clos1/b.*/t1
     mode: combine
     shortest_path: true
     flow_placement: EQUAL_BALANCED
